tests/rosetta/out/Smalltalk/arrays.out
/tmp/arrays.st:6: parse error, expected ']'
